# PlatformGame

./: CMakeLists.txt  Game.cpp  Game.h  GameScreen.cpp  GameScreen.h  LoseScreen.cpp  LoseScreen.h  MapObject.cpp  MapObject.h  Menu.cpp  Menu.h  README.md  Ranking.txt  State.cpp  State.h  StateWrapper.cpp  StateWrapper.h  WinScreen.cpp  WinScreen.h  main.cpp
html/: _game_8h_source.html  _game_screen_8h_source.html  _lose_screen_8h_source.html  _map_object_8h_source.html  _menu_8h_source.html  _state_8h_source.html  _state_wrapper_8h_source.html  _win_screen_8h_source.html  annotated.html  class_game-members.html  class_game.html  class_game_screen-members.html  class_game_screen.html  class_lose_screen-members.html  class_lose_screen.html  class_map_object-members.html  class_map_object.html  class_menu-members.html  class_menu.html  class_state-members.html  class_state.html  class_state_wrapper-members.html  class_state_wrapper.html  class_win_screen-members.html  class_win_screen.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  struct_game_data-members.html  struct_game_data.html
latex/: _game_8h_source.tex  _game_screen_8h_source.tex  _lose_screen_8h_source.tex  _map_object_8h_source.tex  _menu_8h_source.tex  _state_8h_source.tex  _state_wrapper_8h_source.tex  _win_screen_8h_source.tex  annotated.tex  class_game.tex  class_game_screen.eps  class_game_screen.tex  class_lose_screen.eps  class_lose_screen.tex  class_map_object.tex  class_menu.eps  class_menu.tex  class_state.eps  class_state.tex  class_state_wrapper.tex  (+6 more)
(+20 files in other folders)
